--- a/WebContent/pages/object_sequence.html
+++ b/WebContent/pages/object_sequence.html
@@ -3,30 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Eric Zong">
-<title>函数（Function）</title>
+<title>Sequence</title>
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
 <script type="text/javascript" src="../js/title.js"></script>
 </head>
 <body>
-  <h1>创建/修改</h1>
+  <h1>创建</h1>
   <pre class="code">
-CREATE [OR REPLACE]
-  FUNCTION FunctionName(Parameters)
-  RETURN Type
-  [DETERMINISTIC] AS
-  BEGIN
-    …
-  END FunctionName;
-</pre>
-
-  <h1>查询</h1>
+create sequence &lt;SEQUENCE_NAME>
+  minvalue &lt;MIN_VALUE>
+  maxvalue &lt;MAX_VALUE>
+  start with &lt;START_VALUE>
+  increment by &lt;STEP_SIZE>
+  cache &lt;CACHE_SIZE>;</pre>
+  
+  <h1>删除</h1>
   <pre class="code">
-SELECT * FROM USER_OBJECTS;
-SELECT * FROM ALL_OBJECTS;
-SELECT * FROM DBA_OBJECTS;
-
-SELECT * FROM USER_SOURCE;</pre>
+drop sequence &lt;SEQUENCE_NAME>;</pre>
 </body>
 </html>
