--- a/WebContent/pages/object_sequence.html
+++ b/WebContent/pages/object_sequence.html
@@ -7,6 +7,8 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+<link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -15,15 +17,21 @@
 <body>
   <h1>创建</h1>
   <pre class="code">
-create sequence &lt;SEQUENCE_NAME>
-  minvalue &lt;MIN_VALUE>
-  maxvalue &lt;MAX_VALUE>
-  start with &lt;START_VALUE>
-  increment by &lt;STEP_SIZE>
-  cache &lt;CACHE_SIZE>;</pre>
+    <code>
+create sequence &lt;sequence_name>
+  minvalue &lt;min_value>
+  maxvalue &lt;max_value>
+  start with &lt;start_value>
+  increment by &lt;step_size>
+  cache &lt;cache_size>;
+    </code>
+  </pre>
   
   <h1>删除</h1>
   <pre class="code">
-drop sequence &lt;SEQUENCE_NAME>;</pre>
+    <code>
+drop sequence &lt;sequence_name>;
+    </code>
+  </pre>
 </body>
 </html>
