--- a/WebContent/pages/object_sequence.html
+++ b/WebContent/pages/object_sequence.html
@@ -16,22 +16,16 @@
 </head>
 <body>
   <h1>创建</h1>
-  <pre class="code">
-    <code>
+  <pre class="code"><code>
 create sequence &lt;sequence_name>
   minvalue &lt;min_value>
   maxvalue &lt;max_value>
   start with &lt;start_value>
   increment by &lt;step_size>
-  cache &lt;cache_size>;
-    </code>
-  </pre>
+  cache &lt;cache_size>;</code></pre>
   
   <h1>删除</h1>
-  <pre class="code">
-    <code>
-drop sequence &lt;sequence_name>;
-    </code>
-  </pre>
+  <pre class="code"><code>
+drop sequence &lt;sequence_name>;</code></pre>
 </body>
 </html>
